packages/legend-application-query/style/_query-editor.scss
/**
 * Copyright (c) 2020-present, Goldman Sachs
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@use 'mixins' as *;

.query-editor {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  &__logo-header {
    @include flexVCenter;

    justify-content: space-between;
    background: var(--color-dark-grey-80);

    &__combo {
      @include flexVCenter;

      height: 3.4rem;
      padding: 0.2rem;

      &__menu {
        height: 3.4rem;
        width: 5rem;
        border-right: 0.1rem solid var(--color-dark-grey-200);
        background: var(--color-dark-grey-100);
      }

      &__menu-item {
        @include flexCenter;

        height: 3.4rem;
        width: 100%;
        color: var(--color-dark-grey-500);

        svg {
          font-size: 2.3rem;
        }
      }

      &__name {
        color: var(--color-dark-grey-500);
        font-size: 2rem;
        font-weight: 700;
        margin: 1rem;
      }
    }
  }

  &__header {
    @include flexVCenter;

    height: 3.4rem;
    padding: 0.2rem;

    &__content {
      @include flexVCenter;
      @include flexHSpaceBetween;

      height: 100%;
      width: 100%;

      &__title {
        color: var(--color-light-grey-180);
        flex: 1;
        margin: 0 1rem;

        input {
          padding: 0 0.4rem;
        }
      }

      &__title__text {
        @include flexVCenter;

        padding: 0.6rem 0.5rem 0.5rem;
        margin: 0 1rem;
        margin-right: 10%;
        cursor: pointer;
        color: var(--color-light-grey-400);
        font-size: 1.5rem;
        font-weight: 500;
        white-space: nowrap;
      }

      &__title__text--unsaved {
        margin: 0;
      }
    }

    &__actions {
      @include flexVCenter;

      height: 100%;
    }

    &__action-combo {
      @include flexCenter;

      background: var(--color-blue-200);
      height: 2.8rem;
      min-width: 2rem;
      border-radius: 0.2rem;
      margin-right: 0.3rem;

      &__main-btn {
        background: var(--color-blue-200) !important;
        color: var(--color-light-grey-50) !important;

        svg {
          color: var(--color-light-grey-180);
        }
      }

      &__dropdown-btn {
        @include flexCenter;

        height: 2.8rem;
        width: 2rem;
        border-left: 0.1rem solid var(--color-dark-shade-280);

        svg {
          color: var(--color-light-grey-180);
        }
      }
    }

    &__action {
      @include flexCenter;

      height: 2.8rem;
      min-width: 2rem;
      padding: 0 1rem;
      border-radius: 0.2rem;
      margin-right: 0.3rem;

      svg {
        color: var(--color-light-grey-100);
      }

      &__label {
        margin-left: 0.5rem;
        font-size: 1.2rem;
      }

      &__theme-toggler {
        border: 0.1rem solid var(--color-dark-grey-280);
        margin-right: 0.8rem;
      }

      &__icon {
        &--load {
          font-size: 2rem;
          margin-bottom: 0.1rem;
        }

        &--bulb--light {
          color: var(--color-yellow-100) !important;
        }

        &--bulb--light:hover,
        &--bulb--dark:hover {
          color: var(--color-yellow-200) !important;
        }

        &--bulb--dark {
          color: var(--color-light-grey-50) !important;
        }

        &--service {
          font-size: 1.2rem;
        }

        &--productionize {
          font-size: 1.3rem;
        }
      }

      &__view-project {
        @include flexVCenter;

        width: 4.4rem;
        padding: 0;

        &__btn {
          @include flexCenter;

          height: 2.8rem;
          width: 2.8rem;
          border-radius: 0.2rem 0 0 0.2rem;
          padding: 0 0.5rem;
        }

        &__dropdown-trigger {
          @include flexVCenter;

          height: 2.8rem;
          width: 1.6rem;
          border-radius: 0 0.2rem 0.2rem 0;
          border-left: 0.1rem solid var(--color-dark-shade-200);
          cursor: pointer;

          svg {
            font-size: 1.2rem;
          }
        }
      }
    }

    &__action + &__action {
      margin-left: 0;
    }

    &__action__dropdown-trigger {
      margin-left: 0.5rem;
    }
  }

  &__content {
    height: calc(100% - 3.4rem);
    width: 100%;
  }

  &__blocking-alert {
    &__summary-text {
      color: var(--color-light-grey-400);
      font-weight: 500;
      margin-bottom: 2rem;
      text-align: justify;
    }

    &_version-selector {
      width: 60rem;
    }
  }
}

.query-editor__rename__input {
  border-radius: 0.2rem;
  padding: 0.5rem;
  height: 2.3rem;
}

.query-export {
  width: 50vw;
  padding: 0;
  overflow: hidden;

  .input {
    width: 100%;
  }
}

